# NetSim-AiR

./: CMakeLists.txt  GTestSetup.cmake  LICENSE  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
include/: factory.hpp  helpers.hpp  nodes.hpp  package.hpp  reports.hpp  simulation.hpp  storage_types.hpp  types.hpp
src/: factory.cpp  helpers.cpp  nodes.cpp  package.cpp  reports.cpp  simulation.cpp  storage_types.cpp
tests/: test_nodes.cpp  test_storage_types.cpp
